--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  /* Navigation menu */
+  <!-- Navigation menu  -->
   <header>
     <nav>
       <div>
@@ -39,12 +39,12 @@
   </header>
 
   <main>
-  /* Hero Section */
+   <!-- Hero Section  -->
     <section>
       <h1>We are creatives</h1>
       <div><img src="./images/icon-arrow-down.svg" alt="arrow down"></div>
     </section>
-    /* Grid */
+     <!-- Grid  -->
     <section>
       <div>
       <div>
@@ -84,7 +84,7 @@
     </div>
     </section>
 
-    /* Client Testimonial */
+     <!-- Client Testimonial  -->
     <section>
       <h3>Client Testimonials</h3>
       <div>
@@ -117,7 +117,7 @@
       </div>
     </section>
 
-    /* Gallery */
+     <!-- Gallery  -->
     <section>
       <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="Milk Bottles">
       <img src="./images/desktop/image-gallery-orange.jpg" alt="Orange">
